food page에서 버튼을 클릭시 위로 올라가서 a태그 대신 button 태그로 변경

--- a/pages/food/food.html
+++ b/pages/food/food.html
@@ -79,7 +79,7 @@
           <div id="food_kind_check">
             <dl class="food_kind_tabs">
               <dt class="dt1">
-                <a href="#" id="food_kind_tab" class="selected">카테고리</a>
+                <button id="food_kind_tab" class="selected">카테고리</button>
               </dt>
               <dd class="dt1_content">
                 <div class="product_select_wrap">
@@ -164,48 +164,53 @@
                   </form>
                 </div>
               </dd>
-              <dt class="dt2"><a href="#" id="theme_tab">테마</a></dt>
+              <dt class="dt2"><button id="theme_tab">테마</button></dt>
               <dd class="dt2_content">
                 <ul class="service_bn">
                   <li>
-                    <a href="#"
-                      ><img
+                    <button>
+                      <img
                         class="onesun"
                         src="https://image.istarbucks.co.kr/upload/banner/themebnr/82p8KL_20210412162412216.jpg"
                         alt=""
-                    /></a>
+                      />
+                    </button>
                   </li>
                   <li>
-                    <a href="#"
-                      ><img
+                    <button>
+                      <img
                         class="brunch"
                         src="https://image.istarbucks.co.kr/upload/banner/themebnr/bnr_brunch_menu.jpg"
                         alt=""
-                    /></a>
+                      />
+                    </button>
                   </li>
                   <li>
-                    <a href="#"
-                      ><img
+                    <button>
+                      <img
                         class="everland"
                         src="https://image.istarbucks.co.kr/upload/banner/themebnr/everland_r.jpg"
                         alt=""
-                    /></a>
+                      />
+                    </button>
                   </li>
                   <li>
-                    <a href="#"
-                      ><img
+                    <button>
+                      <img
                         class="wholeCake"
                         src="https://image.istarbucks.co.kr/upload/banner/themebnr/bnr_wholecake_190425.jpg"
                         alt=""
-                    /></a>
+                      />
+                    </button>
                   </li>
                   <li>
-                    <a href="#"
-                      ><img
+                    <button>
+                      <img
                         class="jeju"
                         src="https://image.istarbucks.co.kr/upload/banner/themebnr/200731_jeju.jpg"
                         alt=""
-                    /></a>
+                      />
+                    </button>
                   </li>
                 </ul>
               </dd>
