drink page에서 버튼을 클릭시 위로 올라가서 a태그 대신 button 태그로 변경

--- a/pages/drink/drink.html
+++ b/pages/drink/drink.html
@@ -86,7 +86,7 @@
           <div id="drink_kind_check">
             <dl class="drink_kind_tabs">
               <dt class="dt1">
-                <a href="#" id="drink_kind_tab" class="selected">카테고리</a>
+                <button id="drink_kind_tab" class="selected">카테고리</button>
               </dt>
               <dd class="dt1_content">
                 <div class="product_select_wrap">
@@ -195,7 +195,7 @@
                   </form>
                 </div>
               </dd>
-              <dt class="dt2"><a href="#" id="theme_tab">테마</a></dt>
+              <dt class="dt2"><button href="#" id="theme_tab">테마</button></dt>
               <dd class="dt2_content">
                 <ul class="service_bn">
                   <li>
