food.html에서 theme.js 경로 수정

--- a/pages/food/food.html
+++ b/pages/food/food.html
@@ -339,6 +339,6 @@
     </footer>
     <script src="../../js/food/food.js" defer></script>
     <script src="../../js/food/category.js" defer></script>
-    <script src="/js/food/theme.js" defer></script>
+    <script src="../../js/food/theme.js" defer></script>
   </body>
 </html>
