--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
     />
     <script src="https://kit.fontawesome.com/7a4cfa35a1.js" crossorigin="anonymous"></script>
     <title>Starbucks Coffee Korea</title>
-    
   </head>
   <body>
     <div class="container">
       <header>
         <nav>
           <a href="../../index.html">
-            <img class="logo" src="https://www.starbucks.co.kr/common/img/common/logo.png" alt="logo image">
+            <img class="logo" src="https://www.starbucks.co.kr/common/img/common/logo.png" alt="logo image" />
           </a>
           <div class="menus">
             <ul class="menus__sub-menu">
@@ -43,12 +42,9 @@
         </nav>
       </header>
       <main>
-        <h1>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
-          quibusdam, corrupti ut excepturi velit, ab facilis accusantium nobis
-          sapiente quod et aut animi vel officia praesentium, possimus itaque
-          laboriosam dolor?
-        </h1>
+        <a href="#" class="card__banner">
+          <img src="./images/index/banner.png" alt="H-card" />
+        </a>
       </main>
       <footer id="footer">
         <div class="footer_wrap">
@@ -95,44 +91,32 @@
             <ul class="footer_award_slider">
               <li>
                 <a href="#"
-                  ><img
-                    src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_01.jpg"
-                    alt=""
+                  ><img src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_01.jpg" alt=""
                 /></a>
               </li>
               <li>
                 <a href="#"
-                  ><img
-                    src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_02.jpg"
-                    alt=""
+                  ><img src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_02.jpg" alt=""
                 /></a>
               </li>
               <li>
                 <a href="#"
-                  ><img
-                    src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_03.jpg"
-                    alt=""
+                  ><img src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_03.jpg" alt=""
                 /></a>
               </li>
               <li>
                 <a href="#"
-                  ><img
-                    src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_04.jpg"
-                    alt=""
+                  ><img src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_04.jpg" alt=""
                 /></a>
               </li>
               <li>
                 <a href="#"
-                  ><img
-                    src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_05.jpg"
-                    alt=""
+                  ><img src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_05.jpg" alt=""
                 /></a>
               </li>
               <li>
                 <a href="#"
-                  ><img
-                    src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_06.jpg"
-                    alt=""
+                  ><img src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_06.jpg" alt=""
                 /></a>
               </li>
             </ul>
@@ -157,9 +141,7 @@
             <li>TEL : 1522-3232</li>
             <li>개인정보 책임자 : 하익성</li>
           </ul>
-          <span class="copy"
-            >ⓒ 2021 Starbucks Coffee Company. All Rights Reserved.</span
-          >
+          <span class="copy">ⓒ 2021 Starbucks Coffee Company. All Rights Reserved.</span>
         </div>
       </footer>
     </div>
