--- a/index.html
+++ b/index.html
@@ -45,6 +45,28 @@
         <a href="#" class="card__banner">
           <img src="./images/index/banner.png" alt="H-card" />
         </a>
+        <section id="main__wrap">
+          <div class="wrap__container">
+            <div class="wrap__title">
+              <img src="./images/index/mainwrap/main_title.png" alt="" />
+              <div class="detail__btn">
+                <a href="#">자세히 보기</a>
+              </div>
+            </div>
+            <div class="wrap__products">
+              <div class="product wrap__product1"><img src="./images/index/mainwrap/main_blended.png" /></div>
+              <div class="product wrap__product2"><img src="./images/index/mainwrap/main_coldbrew.png" /></div>
+              <div class="product wrap__product3"><img src="./images/index/mainwrap/main_tea.png" /></div>
+            </div>
+          </div>
+        </section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
       </main>
       <footer id="footer">
         <div class="footer_wrap">
