--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       href="https://image.istarbucks.co.kr/common/img/common/favicon.ico?v=200828"
       type="image/ico"
     />
+    <script src="./js/home/rollingText.js" defer></script>
+    <script src="./js/home/home.js" defer></script>
     <script src="https://kit.fontawesome.com/7a4cfa35a1.js" crossorigin="anonymous"></script>
     <title>Starbucks Coffee Korea</title>
   </head>
@@ -60,7 +62,35 @@
             </div>
           </div>
         </section>
-        <section></section>
+        <section id="notice">
+          <div class="notice__left">
+            <div class="inner__notice">
+              <p>공지사항</p>
+            </div>
+            <div class="rolling__box">
+              <ul id="rolling__box">
+                <li class="card_sliding" id="first"><p></p></li>
+                <li class="" id="second"><p></p></li>
+                <li class="" id="third"><p></p></li>
+              </ul>
+            </div>
+            <a href="#">
+              <div class="plus__btn">
+                <i class="fas fa-plus"></i>
+              </div>
+            </a>
+          </div>
+          <div class="notice__right">
+            <a href="#">
+              <div class="inner__promotion">
+                <p>스타벅스 프로모션</p>
+              </div>
+              <div class="arrow__btn">
+                <i class="fas fa-chevron-down"></i>
+              </div>
+            </a>
+          </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
