--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <div class="container">
+      <!-- Header -->
       <header>
         <nav>
           <a href="../../index.html">
@@ -43,10 +44,12 @@
           </div>
         </nav>
       </header>
+      <!-- Main Page -->
       <main>
         <a href="#" class="card__banner">
           <img src="./images/index/banner.png" alt="H-card" />
         </a>
+        <!-- main wrap -->
         <section id="main__wrap">
           <div class="wrap__container">
             <div class="wrap__title">
@@ -62,6 +65,7 @@
             </div>
           </div>
         </section>
+        <!-- Notice -->
         <section id="notice">
           <div class="notice__left">
             <div class="inner__notice">
@@ -91,6 +95,7 @@
             </a>
           </div>
         </section>
+        <!-- Reward -->
         <section id="reward__wrap">
           <div class="reward__inner">
             <div class="reward__logo"><img src="./images/index/rewards-logo.png" alt="" /></div>
@@ -115,12 +120,24 @@
             </div>
           </div>
         </section>
-        <section></section>
-        <section></section>
+        <!-- Bean__product -->
+        <section id="bean__wrap" class="scroll">
+          <div class="bean__inner">
+            <div class="bean__img"><img src="./images/index/beanwrap/bean-product.png" alt="" /></div>
+            <div class="bean__contents">
+              <img src="./images/index/beanwrap/bean-text.png" alt="" />
+              <div class="etc__btn">
+                <a href="#">자세히 보기</a>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section id="reverse__wrap"></section>
         <section></section>
         <section></section>
         <section></section>
       </main>
+      <!-- Footer -->
       <footer id="footer">
         <div class="footer_wrap">
           <div class="footer_menus">
@@ -220,6 +237,5 @@
         </div>
       </footer>
     </div>
-    <script src="./js/index.js" defer />
   </body>
 </html>
