make reserve wrap

--- a/index.html
+++ b/index.html
@@ -132,7 +132,17 @@
             </div>
           </div>
         </section>
-        <section id="reverse__wrap"></section>
+        <section id="reverse__wrap">
+          <div class="reserve__inner">
+            <div class="reserve__title">
+              <img src="./images/index/reservewrap/reserve_sundried_brazil_title.png" alt="" />
+            </div>
+            <div class="reserve__visual">
+              <img src="./images/index/reservewrap/reserve_sundried_brazil_bean4_1.png" alt="" />
+            </div>
+            <div class="reserve__btn"><a href="#">자세히 보기</a></div>
+          </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
