--- a/index.html
+++ b/index.html
@@ -143,7 +143,14 @@
             <div class="reserve__btn"><a href="#">자세히 보기</a></div>
           </div>
         </section>
-        <section></section>
+        <section id="fav__wrap">
+          <div class="fav__inner">
+            <div class="fav__txt1"></div>
+            <div class="fav__txt2"></div>
+            <div class="fav__img"></div>
+            <div class="fav__btn"><a href="#">자세히 보기</a></div>
+          </div>
+        </section>
         <section></section>
         <section></section>
       </main>
