--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
             </div>
           </div>
         </section>
-        <section id="reverse__wrap">
+        <!-- Reserve  -->
+        <section id="reserve__wrap">
           <div class="reserve__inner">
             <div class="reserve__title">
               <img src="./images/index/reservewrap/reserve_sundried_brazil_title.png" alt="" />
@@ -143,6 +144,7 @@
             <div class="reserve__btn"><a href="#">자세히 보기</a></div>
           </div>
         </section>
+        <!-- Favorite -->
         <section id="fav__wrap">
           <div class="fav__inner">
             <div class="fav__txt1"></div>
