make reserve magazine

--- a/index.html
+++ b/index.html
@@ -153,7 +153,16 @@
             <div class="fav__btn"><a href="#">자세히 보기</a></div>
           </div>
         </section>
-        <section></section>
+        <!-- Reserve Magazine -->
+        <section id="reserve__MZ">
+          <div class="mz__inner">
+            <div class="mz__left"><img src="./images/index/reserve_mz/reserve_visual_pc.png" alt="" /></div>
+            <div class="mz__right">
+              <img class="reserve_img-txt" src="./images/index/reserve_mz/reserve_text_pc.png" alt="" />
+            </div>
+          </div>
+          <div class="mz__btn"><a href="#"></a></div>
+        </section>
         <section></section>
       </main>
       <!-- Footer -->
