modify reward section

--- a/index.html
+++ b/index.html
@@ -102,9 +102,14 @@
             <div class="reward__contents">
               <div class="reward__content">
                 <div class="content__text">
-                  <h2>스타벅스만의 특별한 혜택, 스타벅스 리워드</h2>
-                  <p>스타벅스 회원이세요? 로그인을 통해 나만의 리워드를 확인해보세요.</p>
-                  <p>스타벅스 회원이 아니세요? 가입을 통해 리워드 혜택을 즐기세요.</p>
+                  <h2>
+                    스타벅스만의 특별한 혜택,
+                    <span class="bold">스타벅스 리워드</span>
+                  </h2>
+                  <p>
+                    <span class="bold">스타벅스 회원이세요?</span> 로그인을 통해 나만의 리워드를 확인해보세요.<br />
+                    <span class="bold">스타벅스 회원이 아니세요?</span> 가입을 통해 리워드 혜택을 즐기세요.
+                  </p>
                 </div>
                 <div class="content__btn">
                   <a href="#" class="signup__btn btns">회원가입</a><a href="#" class="login__btn btns">로그인</a>
@@ -112,8 +117,11 @@
               </div>
               <div class="reward__gift">
                 <div class="gift__text">
-                  <p>회원 가입 후, 스타벅스 e-Gift Card를 "나에게 선물하기"로 구매하시고, 편리하게 등록하세요!</p>
-                  <p>카드를 등록하여 스타벅스 리워드 회원이 되신 후, 첫 구매를 하시면 무료 음료쿠폰을 드립니다!</p>
+                  <p>
+                    회원 가입 후, 스타벅스 e-Gift Card를
+                    <span class="bold">"나에게 선물하기"로 구매하시고, 편리하게 등록하세요!</span><br />
+                    카드를 등록하여 스타벅스 리워드 회원이 되신 후, 첫 구매를 하시면 무료 음료쿠폰을 드립니다!
+                  </p>
                 </div>
                 <div class="gift__btn"><a href="#">e-Gift Card 선물하기</a></div>
               </div>
