footer section 수정

--- a/index.html
+++ b/index.html
@@ -218,34 +218,22 @@
           <div class="footer_award_inner">
             <ul class="footer_award_slider">
               <li>
-                <a href="#"
-                  ><img src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_01.jpg" alt=""
-                /></a>
+                <a href="#"><img src="https://image.istarbucks.co.kr/common/img/footer/footer_award23.jpg" alt="" /></a>
               </li>
               <li>
-                <a href="#"
-                  ><img src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_02.jpg" alt=""
-                /></a>
+                <a href="#"><img src="https://image.istarbucks.co.kr/common/img/footer/footer_award24.jpg" alt="" /></a>
               </li>
               <li>
-                <a href="#"
-                  ><img src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_03.jpg" alt=""
-                /></a>
+                <a href="#"><img src="https://image.istarbucks.co.kr/common/img/footer/footer_award25.jpg" alt="" /></a>
               </li>
               <li>
-                <a href="#"
-                  ><img src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_04.jpg" alt=""
-                /></a>
+                <a href="#"><img src="https://image.istarbucks.co.kr/common/img/footer/footer_award26.jpg" alt="" /></a>
               </li>
               <li>
-                <a href="#"
-                  ><img src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_05.jpg" alt=""
-                /></a>
+                <a href="#"><img src="https://image.istarbucks.co.kr/common/img/footer/footer_award27.jpg" alt="" /></a>
               </li>
               <li>
-                <a href="#"
-                  ><img src="https://image.istarbucks.co.kr/common/img/footer/footer_award17_06.jpg" alt=""
-                /></a>
+                <a href="#"><img src="https://image.istarbucks.co.kr/common/img/footer/footer_award28.jpg" alt="" /></a>
               </li>
             </ul>
           </div>
