--- a/index.html
+++ b/index.html
@@ -171,7 +171,17 @@
           </div>
           <div class="mz__btn"><a href="#"></a></div>
         </section>
-        <section></section>
+        <section id="store__wrap">
+          <div class="store__inner">
+            <div class="store__img1"></div>
+            <div class="store__img2"></div>
+            <div class="store__img3"></div>
+            <div class="store__img4"></div>
+            <div class="store__txt1"></div>
+            <div class="store__txt2"></div>
+            <div class="store__btn"><a href="#">매장 찾기</a></div>
+          </div>
+        </section>
       </main>
       <!-- Footer -->
       <footer id="footer">
